Add javascript to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <div></div>
+        <div id="app"></div>
+        <script type="text/javascript">
+            const app = document.getELementById('app');
+        </script>
     </body>
 </html>
