--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="app"></div>
         <script type="text/javascript">
             // Select the div element with 'app' id
-            const app = document.getELementById("app");
+            const app = document.getElementById("app");
             // Create a new H1 element
             const header = document.createElement("h1");
             // Create a new text node for the H1 element
