--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       function HomePage() {
         const names = ["Ada Lovelace", "Grace Hopper", "Margaret Hamilton"];
 
+        const [likes, setLikes] = React.useState(0);
+
         function handleClick() {
-          console.log("increment like count");
+          setLikes(likes + 1);
         }
 
         return (
@@ -30,7 +32,7 @@
                 <li key={name}>{name}</li>
               ))}
             </ul>
-            <button onClick={handleClick}>Like</button>
+            <button onClick={handleClick}>Like({likes})</button>
           </div>
         )
       }
